<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/font1"
        android:text="@string/choose_role"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_player_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/font1"
            android:text="@string/player_role"
            android:textColor="@color/text_color"></Button>

        <Button
            android:id="@+id/btn_presenter_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/font1"
            android:text="@string/presenter_role"
            android:textColor="@color/text_color"></Button>
    </LinearLayout>
</LinearLayout>