<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    android:orientation="vertical">

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/timeSettingsButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:orientation="horizontal"
        android:text="@string/time_settings"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/Simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gameSettingsButton"
        android:layout_width="150dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/game_settings"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/timeSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/Simple"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/text_back_button"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="450dp"
        android:layout_height="200dp"
        android:clickable="false"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>