<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_profile_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="@font/font1"
        android:text="@string/profile_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:fontFamily="@font/font1"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_settings"
        app:srcCompat="@drawable/ic_boy"></ImageView>

    <EditText
        android:id="@+id/et_player_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:fontFamily="@font/font1"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"></EditText>

    <Button
        android:id="@+id/btn_save_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/save_nickname"
        android:textColor="@color/text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_player_nickname"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>