<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    android:orientation="horizontal"
    tools:context=".activities.MainActivity"

    >

    <Button
        android:id="@+id/log_out"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/log_out"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile"

        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/ic_profile"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/new_Game"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_pack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/settings" />

    <Button
        android:id="@+id/btn_create_pack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/font1"
        android:text="@string/create_new_pack"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="467dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toTopOf="@+id/newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652"
        app:srcCompat="@drawable/maxresdefault" />


</androidx.constraintlayout.widget.ConstraintLayout>