<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textSettings"
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:clickable="false"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/timeToAnswer"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:max="120"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/timeToFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar

        android:id="@+id/timeToClick"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:max="120"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/timeToAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/timeToFinal"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:max="120"
        android:progress="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTextTimeToClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"

        android:text="@string/text_time_settings_timeToClick"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeToClick" />

    <TextView
        android:id="@+id/textTimeToFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="@string/text_time_settings_timeToFinal"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeToFinal" />

    <TextView
        android:id="@+id/textTimeToAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="@string/text_time_settings_timeToAnswer"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeToAnswer" />

    <EditText
        android:id="@+id/editTextTimeToAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:inputType="number"
        android:text="10"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@id/timeToAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTimeToClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:inputType="number"
        android:text="10"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@id/timeToClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTimeToFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/font1"
        android:gravity="center"
        android:inputType="number"
        android:text="10"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/timeToFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>