<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008577"
    android:orientation="vertical"

    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font1"
                    android:labelFor="@id/text_email"

                    android:text="email"
                    android:textColor="@color/text_color" />

                <EditText
                    android:id="@+id/text_email"

                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/font1"
                    android:hint="john@gmail.com"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font1"
                    android:labelFor="@id/edit_text_password"

                    android:text="@string/password_hint"
                    android:textColor="@color/text_color" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/font1"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/text_color" />


                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/font1"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/text_color" />


                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="@drawable/button"
                    android:fontFamily="@font/font1"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"

                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/font1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/not_reg"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/text_color" />
            </LinearLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/user_profile_image_background"


            android:elevation="4dp"
            android:src="@drawable/ic_boy"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>

    <ProgressBar
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>